--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -2,17 +2,21 @@ version: 2
 
 sources:
   - name: jaffle_shop
+    description: a clone of a Postgres application database 
     database: dbt-tutorial
     schema: jaffle_shop
     tables:
       - name: customers
+        description: raw customers data
         columns:
           - name: id
+            description: primary key for customers data
             tests:
               - unique
               - not_null
                   
       - name: orders
+        description: raw orders data
         columns:
           - name: id
             tests:
